--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		</div>
 		
 		<h1>Sobre</h1>
-		<p ID = "p1">Eu curso Sistemas para Internet na Uniesp, e atualmente estou no primeiro período.<br>
-		 Este é um trabalho em andamento, por isso a página é tão primitiva, eu quero continuar<br> estudando 
+		<p ID = "p1">Eu curso Sistemas para Internet na Uniesp, e atualmente estou no primeiro período.
+		 Este é um trabalho em andamento, por isso a página é tão primitiva, eu quero continuar estudando 
 		 e me aprimorando na área de tecnologia, porque tudo é fascinante pra mim,<br> desde aplicações
 		 complexas até uma simples página web como essa.</p>
 		 
@@ -58,7 +58,7 @@
 		 <p ID = "p2">Eu vou estar atualizando essa página constantemente, e conto com a sua ajuda para me aprimorar<br>
 		 você pode me mandar uma mensagem ! É só ir até a aba "Feedback" para me dar alguma idéia.</p>
 		 
-		 <p ID = "p3">A responsividade ainda é um problema pra essa página, além disso, também preciso otimizar<br>
+		 <p ID = "p3">A responsividade ainda é um problema pra essa página, além disso, também preciso otimizar
 		 muitas outras coisas.</p>
 	
 	</main>
