--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 		 <p ID = "p2">Eu vou estar atualizando essa página constantemente, e conto com a sua ajuda para me aprimorar<br>
 		 você pode me mandar uma mensagem ! É só ir até a aba "Feedback" para me dar alguma idéia.</p>
 		 
-		 <p ID = "p3">A responsividade ainda é um problema pra essa página, além disso, também preciso otimizar
-		 muitas outras coisas.</p>
+		 <p ID = "p3">Agora meu projeto tem um repositório no GitHub !!!.</p>
 	
 	</main>
 	
