--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 	<link rel = "icon" href = "img/sitelogo.ico" type = "image/x-icon">
 	<link href = "style.css" rel = "stylesheet" type = "text/css"/>
+
+	<script>
+		const height = document.documentElement.clientHeight;
+	const width = document.documentElement.clientWidth;
+	
+	console.log(height);
+	console.log(width);
+	</script>
+
 	<title>Rafahub | P1A</title>
 </head>
 
@@ -58,7 +67,7 @@
 		 <p ID = "p2">Eu vou estar atualizando essa página constantemente, e conto com a sua ajuda para me aprimorar<br>
 		 você pode me mandar uma mensagem ! É só ir até a aba "Feedback" para me dar alguma idéia.</p>
 		 
-		 <p ID = "p3">Agora meu projeto tem um repositório no GitHub !!!</p>
+		 <p ID = "p3">Agora meu projeto tem um repositório no GitHub !!! E a fonte tá mais bonitinha também :D</p>
 	
 	</main>
 	
