--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 		 <p ID = "p2">Eu vou estar atualizando essa página constantemente, e conto com a sua ajuda para me aprimorar<br>
 		 você pode me mandar uma mensagem ! É só ir até a aba "Feedback" para me dar alguma idéia.</p>
 		 
-		 <p ID = "p3">Agora meu projeto tem um repositório no GitHub !!! E a fonte tá mais bonitinha também :D</p>
+		 <p class = "p3">Agora meu projeto tem um repositório no GitHub !!! E a fonte tá mais bonitinha também :D</p>
+		 <p class = "p3">Mais uma atividade da faculdade adicionada em: Trabalhos</p>
 	
 	</main>
 	
@@ -80,7 +81,6 @@
 		<a href = "https://www.linkedin.com/in/raphael-gomes-b8192327a/" target = "_blank">
 			<img class = "socials" src = "img/linkedin.png">
 		</a>
-		
 		
 	</footer>
 </body>
