--- a/trabalhos.html
+++ b/trabalhos.html
@@ -26,6 +26,12 @@
 	</header>
 	
 	<main>
+		<h1>Card Simples</h1>
+		<a href = "https://chanelparfum.netlify.app/" target="_blank">
+			<img ID = "chanel" src = "img/chanel.JPG">
+		</a>
+		<p ID = pchanel>Apenas um card simples com redirecionamento para a compra do perfume.</p>
+
 		<h1>Contador de Dias</h1>
 		<a href = "https://contando-os-dias.netlify.app/" target = "_blank">
 			<img ID = "shelly" src = "img/shelly.png">
