--- a/feedback.html
+++ b/feedback.html
@@ -14,16 +14,20 @@
 
 <body>
 	<header>
-		
-		<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
+		<div class = "container">
+			<div class = "navbar-container">
+				<nav>
+					<a href = "index.html">
+						<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
+					</a>
 	
-		<nav>
-			<ul>
-				<li><a href = "index.html">PÁGINA INICIAL</a></li>
-				<li><a href = "trabalhos.html">TRABALHOS</a></li>
-				<li><a href = "feedback.html"><span>FEEDBACK</span></a></li>
-			</ul>
-		</nav>
+					<ul class="navbar-items">
+						<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
+						<li><a href = "trabalhos.html">TRABALHOS</a></li>
+						<li><a href = "feedback.html">FEEDBACK</a></li>
+					</ul>
+				</nav>
+			</div>
 	</header>
 	
 	<main>
