--- a/index.html
+++ b/index.html
@@ -21,54 +21,46 @@
 
 <body>
 	<header>
-
-		<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
-
-		<nav>
-			<ul>
-				<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
-				<li><a href = "trabalhos.html">TRABALHOS</a></li>
-				<li><a href = "feedback.html">FEEDBACK</a></li>
-			</ul>
-		</nav>
+		<div class = "container">
+			<div class = "navbar-container">
+				<nav>
+					<a href = "index.html">
+						<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
+					</a>
+	
+					<ul class="navbar-items">
+						<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
+						<li><a href = "trabalhos.html">TRABALHOS</a></li>
+						<li><a href = "feedback.html">FEEDBACK</a></li>
+					</ul>
+				</nav>
+			</div>
 	</header>
 	
 	<main>
-		
-		<h1>Destaques</h1>
-		
-		<div ID = "imagens">
-		
-			<a href = "https://www.instagram.com/p/CNl_BU5rn0bml4arZn9NXbyKQKH8utkR3jiY0k0/" target = "_blank">
-				<img class = "foto" src = "img/foto1.jpeg" Alt = "amigos antigos">
-			</a>
-			
-			<a href = "https://www.instagram.com/p/B4V4Vf5nbaPlLHkvHcjraWHvQiMeu_aYw-uFJE0/" target = "_blank">
-				<img class = "foto" src = "img/foto2.jpeg" Alt = "computador">
-			</a>
-			
-			<a href = "https://www.instagram.com/p/CW6uQByLM_hPHMVrz353qc4btzbtDB_WclXl8o0/" target = "_blank">
-				<img class = "foto" src = "img/foto3.jpeg" Alt = "basquete">
-			</a>
-			
-			<a href = "https://www.instagram.com/qchocolatado/?img_index=1" target = "_blank">
-				<img class = "foto" src = "img/foto4.jpeg" Alt = "comerce">
-			</a>
-			
-		</div>
-		
+        <div class="main-banner">
+
+        </div>
+
+        <section class = "tecnologias">
+            <div class = "t-title">
+                <h1>Tecnologias</h1>
+            </div>
+
+			<div class = "whitebox">
+            	<div class = "icons">
+                	<img src = "img/Other-html-5-icon.png">
+                	<img class = "cssicon" src = "img/css-icon.png">
+                	<img src = "img/javascript-3-512.png">
+                	<img src = "img/Python-logo-notext.svg.png">
+                	<img class = "flaskicon" src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+            	</div>
+			</div>
 		<h1>Sobre</h1>
 		<p ID = "p1">Eu curso Sistemas para Internet na Uniesp, e atualmente estou no primeiro período.
 		 Este é um trabalho em andamento, por isso a página é tão primitiva, eu quero continuar estudando 
-		 e me aprimorando na área de tecnologia, porque tudo é fascinante pra mim,<br> desde aplicações
+		 e me aprimorando na área de tecnologia, porque tudo é fascinante pra mim, desde aplicações
 		 complexas até uma simples página web como essa.</p>
-		 
-		 <h1>Atualizações</h1>
-		 <p ID = "p2">Eu vou estar atualizando essa página constantemente, e conto com a sua ajuda para me aprimorar<br>
-		 você pode me mandar uma mensagem ! É só ir até a aba "Feedback" para me dar alguma idéia.</p>
-		 
-		 <p class = "p3">Agora meu projeto tem um repositório no GitHub !!! E a fonte tá mais bonitinha também :D</p>
-		 <p class = "p3">Mais uma atividade da faculdade adicionada em: Trabalhos</p>
 	
 	</main>
 	
