--- a/trabalhos.html
+++ b/trabalhos.html
@@ -13,39 +13,65 @@
 
 <body>
 	<header>
-		
-		<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
+		<div class = "container">
+			<div class = "navbar-container">
+				<nav>
+					<a href = "index.html">
+						<img ID = "rafahublogo" src = "img/rafahublogo.png"/>
+					</a>
 	
-		<nav>
-			<ul>
-				<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
-				<li><a href = "trabalhos.html"><span>TRABALHOS</span></a></li>
-				<li><a href = "feedback.html">FEEDBACK</a></li>
-			</ul>
-		</nav>
+					<ul class="navbar-items">
+						<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
+						<li><a href = "trabalhos.html">TRABALHOS</a></li>
+						<li><a href = "feedback.html">FEEDBACK</a></li>
+					</ul>
+				</nav>
+			</div>
 	</header>
 	
 	<main>
-		<h1>Card Simples</h1>
-		<a href = "https://chanelparfum.netlify.app/" target="_blank">
-			<img ID = "chanel" src = "img/chanel.JPG">
-		</a>
-		<p ID = pchanel>Apenas um card simples com redirecionamento para a compra do perfume.</p>
+		<div class = "trabalhos">
+			<div class = "hdc">
+				<h1>HDC Host</h1>
+			</div>
+			<div class = "logobarcodesc">
+				<a href = "https://hdchost.netlify.app/" target = "_blank">
+					<img ID = "hdclogo" src = "img/hdcimage.JPG">
+				</a>
+				<p ID = "pbarco">Página comercial de uma empresa com serviços de hospedagem web.</p>
+			</div>
 
-		<h1>Contador de Dias</h1>
-		<a href = "https://contando-os-dias.netlify.app/" target = "_blank">
-			<img ID = "shelly" src = "img/shelly.png">
-		</a>
-		<p ID = "pshelly">Consiste em uma página simples feita para contar os dias que faltam até a namorada dele chegar.</p>
-		
-		<h1>Aluguel de Iates</h1>
-		<a href = "https://projeto-aluguel-de-iates.netlify.app/" target = "_blank">
-			<img ID = "logobarco" src = "img/barcologo.png">
-		</a>
-		<p ID = "pbarco">Primeiro trabalho para a faculdade, era apenas para ser uma estruturação em html, mas eu não sabia disso.</p>
-	
-	
-	
+			<div class = "channel">
+				<h1>Card Simples</h1>
+			</div>
+			<div class = "channeldesc">
+				<a href = "https://chanelparfum.netlify.app/" target="_blank">
+					<img ID = "chanel" src = "img/chanel.JPG">
+				</a>
+				<p ID = pchanel>Apenas um card simples com redirecionamento para a compra do perfume.</p>
+			</div>
+
+			<div class = "shelly">
+				<h1>Contador de Dias</h1>
+			</div>
+			<div class = "shellydesc">
+				<a href = "https://contando-os-dias.netlify.app/" target = "_blank">
+					<img ID = "shelly" src = "img/shelly.png">
+				</a>
+				<p ID = "pshelly">Consiste em uma página simples feita para contar os dias que faltam até a namorada dele chegar.</p>
+			</div>
+
+			<div class = "logobarco">
+				<h1>Aluguel de Iates</h1>
+			</div>
+			<div class = "logobarcodesc">
+				<a href = "https://projeto-aluguel-de-iates.netlify.app/" target = "_blank">
+					<img ID = "logobarco" src = "img/barcologo.png">
+				</a>
+				<p ID = "pbarco">Primeiro trabalho para a faculdade, era apenas para ser uma estruturação em html, mas eu não sabia disso.</p>
+			</div>
+
+		</div>
 	</main>
 	<footer>
 	
