--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
 
 			<div class = "whitebox">
             	<div class = "icons">
-                	<img src = "img/Other-html-5-icon.png">
-                	<img class = "cssicon" src = "img/css-icon.png">
-                	<img src = "img/javascript-3-512.png">
-                	<img src = "img/Python-logo-notext.svg.png">
-                	<img class = "flaskicon" src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+					<div class = "primeiro-quadrante">
+						<img src = "img/Other-html-5-icon.png">
+                		<img class = "cssicon" src = "img/css-icon.png">
+					</div>
+					<div class ="segundo-quadrante">
+						<img src = "img/javascript-3-512.png">
+						<img src = "img/Python-logo-notext.svg.png">
+					</div>
+					<div class = "quinto-quadrante">
+						<img class = "flaskicon" src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+					</div>
             	</div>
 			</div>
 		<h1>Sobre</h1>
