--- a/trabalhos.html
+++ b/trabalhos.html
@@ -35,7 +35,7 @@
 				<h1>HDC Host</h1>
 			</div>
 			<div class = "logobarcodesc">
-				<a href = "https://hdchost.netlify.app/" target = "_blank">
+				<a href = "https://myhdchost.netlify.app/" target = "_blank">
 					<img ID = "hdclogo" src = "img/hdcimage.JPG">
 				</a>
 				<p ID = "pbarco">Página comercial de uma empresa com serviços de hospedagem web.</p>
