adição de portifólio

--- a/trabalhos.html
+++ b/trabalhos.html
@@ -41,6 +41,16 @@
 				<p ID = "pbarco">Página comercial de uma empresa com serviços de hospedagem web.</p>
 			</div>
 
+			<div class = "blog">
+				<h1>Blog Semântico</h1>
+			</div>
+			<div class = "logoblog">
+				<a href = "https://blogsemantico.netlify.app/" target = "_blank">
+					<img ID = "bloglogo" src = "img/bloglogo.JPG">
+				</a>
+				<p ID = "pblog">Página simples para prática de html semântico.</p>
+			</div>
+
 			<div class = "channel">
 				<h1>Card Simples</h1>
 			</div>
