--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 					<ul class="navbar-items">
 						<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
-						<li><a href = "trabalhos.html">TRABALHOS</a></li>
+						<li><a href = "projetos.html">PROJETOS</a></li>
 						<li><a href = "feedback.html">FEEDBACK</a></li>
 					</ul>
 				</nav>
