--- a/projetos.html
+++ b/projetos.html
@@ -6,9 +6,8 @@
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge">
 	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 	<link rel = "icon" href = "img/sitelogo.ico" type = "image/x-icon">
-	<title>Trabalhos</title>
+	<title>Projetos</title>
 	<link href = "style.css" rel = "stylesheet" type = "text/css"/>
-	<title>Raphael Gomes | P1A</title>
 </head>
 
 <body>
@@ -22,7 +21,7 @@
 	
 					<ul class="navbar-items">
 						<li><a href = "index.html"><span>PÁGINA INICIAL</span></a></li>
-						<li><a href = "trabalhos.html">TRABALHOS</a></li>
+						<li><a href = "projetos.html">PROJETOS</a></li>
 						<li><a href = "feedback.html">FEEDBACK</a></li>
 					</ul>
 				</nav>
@@ -31,6 +30,26 @@
 	
 	<main>
 		<div class = "trabalhos">
+			<div class = "QR">
+				<h1>Gerador de QR</h1>
+			</div>
+			<div class = "qrdesc">
+				<a href = "https://geradordeqr.netlify.app/" target = "_blank">
+					<img ID = "qrlogo" src = "img/qrlogo.png">
+				</a>
+				<p ID = "pqr">Página com funcionalidade de gerar um QR Code de qualquer texto ou URL.</p>
+			</div>
+
+			<div class = "Tabuada">
+				<h1>Tabuada</h1>
+			</div>
+			<div class = "tabuadadesc">
+				<a href = "https://tabuadaj.netlify.app/" target = "_blank">
+					<img ID = "tabuadalogo" src = "img/tabuadalogo.JPG">
+				</a>
+				<p ID = "ptabuada">Página com funcionalidade de apresentar a tabuada de qualquer número.</p>
+			</div>
+
 			<div class = "hdc">
 				<h1>HDC Host</h1>
 			</div>
