--- a/projetos.html
+++ b/projetos.html
@@ -33,80 +33,80 @@
 			<div class = "QR">
 				<h1>Database</h1>
 			</div>
-			<div class = "qrdesc">
+			<div class = "jobdesc">
 				<a href = "https://databaseprototype.netlify.app/" target = "_blank">
-					<img ID = "qrlogo" src = "img/databaseicon.jpg">
+					<img class = "joblogo" src = "img/databaseicon.jpg">
 				</a>
-				<p ID = "pqr">Protótipo de banco de dados, usando JavaScript e JSON.</p>
+				<p ID = "pjob">Protótipo de banco de dados, usando JavaScript e JSON.</p>
 			</div>
 			<div class = "QR">
 				<h1>Gerador de QR</h1>
 			</div>
-			<div class = "qrdesc">
+			<div class = "jobdesc">
 				<a href = "https://geradordeqr.netlify.app/" target = "_blank">
-					<img ID = "qrlogo" src = "img/qrlogo.png">
+					<img class = "joblogo" src = "img/qrlogo.png">
 				</a>
-				<p ID = "pqr">Página com funcionalidade de gerar um QR Code de qualquer texto ou URL.</p>
+				<p ID = "pjob">Página com funcionalidade de gerar um QR Code de qualquer texto ou URL.</p>
 			</div>
 
 			<div class = "Tabuada">
 				<h1>Tabuada</h1>
 			</div>
-			<div class = "tabuadadesc">
+			<div class = "jobdesc">
 				<a href = "https://tabuadaj.netlify.app/" target = "_blank">
-					<img ID = "tabuadalogo" src = "img/tabuadalogo.JPG">
+					<img class = "joblogo" src = "img/tabuadalogo.JPG">
 				</a>
-				<p ID = "ptabuada">Página com funcionalidade de apresentar a tabuada de qualquer número.</p>
+				<p ID = "pjob">Página com funcionalidade de apresentar a tabuada de qualquer número.</p>
 			</div>
 
 			<div class = "hdc">
 				<h1>HDC Host</h1>
 			</div>
-			<div class = "logobarcodesc">
+			<div class = "jobdesc">
 				<a href = "https://myhdchost.netlify.app/" target = "_blank">
-					<img ID = "hdclogo" src = "img/hdcimage.JPG">
+					<img class = "joblogo" src = "img/hdcimage.JPG">
 				</a>
-				<p ID = "pbarco">Página comercial de uma empresa com serviços de hospedagem web.</p>
+				<p ID = "pjob">Página comercial de uma empresa com serviços de hospedagem web.</p>
 			</div>
 
 			<div class = "blog">
 				<h1>Blog Semântico</h1>
 			</div>
-			<div class = "logoblog">
+			<div class = "jobdesc">
 				<a href = "https://blogsemantico.netlify.app/" target = "_blank">
-					<img ID = "bloglogo" src = "img/bloglogo.JPG">
+					<img class = "joblogo" src = "img/bloglogo.JPG">
 				</a>
-				<p ID = "pblog">Página simples para prática de html semântico.</p>
+				<p ID = "pjob">Página simples para prática de html semântico.</p>
 			</div>
 
 			<div class = "channel">
 				<h1>Card Simples</h1>
 			</div>
-			<div class = "channeldesc">
+			<div class = "jobdesc">
 				<a href = "https://chanelparfum.netlify.app/" target="_blank">
-					<img ID = "chanel" src = "img/chanel.JPG">
+					<img class = "joblogo" src = "img/chanel.JPG">
 				</a>
-				<p ID = pchanel>Apenas um card simples com redirecionamento para a compra do perfume.</p>
+				<p ID = pjob>Apenas um card simples com redirecionamento para a compra do perfume.</p>
 			</div>
 
 			<div class = "shelly">
 				<h1>Contador de Dias</h1>
 			</div>
-			<div class = "shellydesc">
+			<div class = "jobdesc">
 				<a href = "https://contando-os-dias.netlify.app/" target = "_blank">
-					<img ID = "shelly" src = "img/shelly.png">
+					<img class = "joblogo" src = "img/shelly.png">
 				</a>
-				<p ID = "pshelly">Consiste em uma página simples feita para contar os dias que faltam até a namorada dele chegar.</p>
+				<p ID = "pjob">Consiste em uma página simples feita para contar os dias que faltam até a namorada dele chegar.</p>
 			</div>
 
 			<div class = "logobarco">
 				<h1>Aluguel de Iates</h1>
 			</div>
-			<div class = "logobarcodesc">
+			<div class = "jobdesc">
 				<a href = "https://projeto-aluguel-de-iates.netlify.app/" target = "_blank">
-					<img ID = "logobarco" src = "img/barcologo.png">
+					<img class = "joblogo" src = "img/barcologo.png">
 				</a>
-				<p ID = "pbarco">Primeiro trabalho para a faculdade, era apenas para ser uma estruturação em html, mas eu não sabia disso.</p>
+				<p ID = "pjob">Primeiro trabalho para a faculdade, era apenas para ser uma estruturação em html, mas eu não sabia disso.</p>
 			</div>
 
 		</div>
