--- a/index.html
+++ b/index.html
@@ -49,17 +49,19 @@
 
 			<div class = "whitebox">
             	<div class = "icons">
-					<div class = "primeiro-quadrante">
 						<img src = "img/Other-html-5-icon.png">
-                		<img class = "cssicon" src = "img/css-icon.png">
-					</div>
-					<div class ="segundo-quadrante">
+                		<img src = "img/css-icon.png">
 						<img src = "img/javascript-3-512.png">
 						<img src = "img/Python-logo-notext.svg.png">
-					</div>
-					<div class = "quinto-quadrante">
-						<img class = "flaskicon" src = "img/flask-icon-2048x1826-nxzeqh6a.png">
-					</div>
+						<img src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+
+						<img src = "img/Other-html-5-icon.png">
+                		<img src = "img/css-icon.png">
+						<img src = "img/javascript-3-512.png">
+						<img src = "img/Python-logo-notext.svg.png">
+						<img src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+						
+						<h2>Em busca de mais...</h2>
             	</div>
 			</div>
 		<h1>Sobre</h1>
