--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	console.log(width);
 	</script>
 
-	<title>Rafahub | P1A</title>
+	<title>Rafahub | P2A</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
             	</div>
 			</div>
 		<h1>Sobre</h1>
-		<p ID = "p1">Eu curso Sistemas para Internet na Uniesp, e atualmente estou no primeiro período.
+		<p ID = "p1">Eu curso Sistemas para Internet na Uniesp, e atualmente estou no segundo período.
 		 Este é um trabalho em andamento, por isso a página é tão primitiva, eu quero continuar estudando 
 		 e me aprimorando na área de tecnologia, porque tudo é fascinante pra mim, desde aplicações
 		 complexas até uma simples página web como essa.</p>
