--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 	</main>
 	
 	<footer>
-	
-		<a href = "https://github.com/RafInlove" target = "_blank">
-			<img class = "socials" src = "img/github.png">
-		</a>
+		<div class = "social">
+			<a href = "https://github.com/RafInlove" target = "_blank">
+				<img class = "socials" src = "img/github.png">
+			</a>
 		
-		<a href = "https://www.linkedin.com/in/raphael-gomes-b8192327a/" target = "_blank">
-			<img class = "socials" src = "img/linkedin.png">
-		</a>
-		
+			<a href = "https://www.linkedin.com/in/raphael-gomes-b8192327a/" target = "_blank">
+				<img class = "socials" src = "img/linkedin.png">
+			</a>
+		</div>
 	</footer>
 </body>
 </html>
