--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
 						<img src = "img/javascript-3-512.png">
 						<img src = "img/Python-logo-notext.svg.png">
 						<img src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+						<img src="img/javalogo.png" class = "javalogo">
+						<img src="img/Gamemaker.svg">
 
 						<img src = "img/Other-html-5-icon.png">
                 		<img src = "img/css-icon.png">
 						<img src = "img/javascript-3-512.png">
 						<img src = "img/Python-logo-notext.svg.png">
 						<img src = "img/flask-icon-2048x1826-nxzeqh6a.png">
+						<img src="img/javalogo.png" class = "javalogo">
+						<img src="img/Gamemaker.svg">
 						
 						<h2>Em busca de mais...</h2>
             	</div>
